<resources>
    <string name="app_name">FitTalk</string>

    <!-- Sign In -->
    <string name="email">이메일</string>
    <string name="password">비밀번호</string>
    <string name="signin_email">로그인 또는 계정 생성 및 로그인</string>
    <string name="signin_google">Google 계정으로 로그인</string>
    <string name="signin_facebook">Facebook 계정으로 로그인</string>
    <string name="signup_complete">회원가입 성공</string>
    <string name="signin_complete">로그인 성공</string>
    <string name="signout">쉴래, 로그아웃!</string>
    <string name="signout_success">로그아웃 성공</string>
    <string name="signout_fail">로그아웃 실패</string>
    <string name="signout_fail_null">이메일과 비밀번호를 입력해주세요</string>

    <!-- Bottom Navigation View -->
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="photo">Photo</string>
    <string name="schedule">Schedule</string>
    <string name="alarm">Alarm</string>
    <string name="account">Account</string>
    <string name="chatbot">Chatbot</string>

    <!-- Account -->
    <string name="post">소중한 기록들</string>
    <string name="following">내 롤모델들</string>
    <string name="follower">내 팬들</string>
    <string name="follow">좀 하네? 팔로우 할래!</string>
    <string name="follow_cancel">별로.. 팔로우 취소할래!</string>
    <string name="profile">Profile</string>
    <string name="count_0">0</string>

    <!-- Follower, Following List -->
    <string name="list_follow">팔로우</string>
    <string name="list_follow_cancel">팔로우 취소</string>

    <!-- Alarm -->
    <string name="alarm_favorite">님이 언더아머 착용 허가 마크를 눌러줬습니다.</string>
    <string name="alarm_who">님이 </string>
    <string name="alarm_comment"> 댓글을 남겼습니다.</string>
    <string name="alarm_follow">님이 회원님을 팔로우하기 시작했습니다.</string>

    <!-- Comment -->
    <string name="comment">게시</string>

    <!-- Add Photo -->
    <string name="upload_image">공유</string>
    <string name="hint_image_content">당신만의 톡톡 튀는 느낌을 표현해보세요!</string>
    <string name="upload_photo_success">공유 성공</string>
    <string name="upload_fail">공유 실패</string>

    <!-- Add Schedule -->
    <string name="mon">월요일</string>
    <string name="tue">화요일</string>
    <string name="wed">수요일</string>
    <string name="thu">목요일</string>
    <string name="fri">금요일</string>
    <string name="sat">토요일</string>
    <string name="sun">일요일</string>
    <string name="hint_schedule_content">당신의 운동 계획을 적어주세요!</string>
    <string name="upload_schedule">등록</string>
    <string name="update_schedule">업데이트</string>
    <string name="upload_schedule_success">운동 계획을 등록했습니다!</string>

    <!-- Chatbot -->
    <string name="hint_chatbot">FitTalk에게 말을 걸어보세요!</string>
    <string name="chat">말걸기</string>
    <string name="chat_bubble">말풍선</string>

    <!-- Search -->
    <string name="search_user_email">검색</string>
    <string name="search_hint">이메일 아이디로 찾기!</string>

    <!-- Direct Message -->
    <string name="direct_message">보내기!</string>
    <string name="dm_hint">상대방에게 메세지를 보내보세요!</string>

    <!-- Toolbar -->
    <string name="back">Back</string>
    <string name="no_image">no_image</string>

    <!-- etc -->
    <item name="visible" type="id" />
    <item name="masked" type="id" />

</resources>
