<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"

    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginHorizontal="5dp"
        android:layout_height="100dp">

        <ImageView
            android:id="@+id/account_profile"
            android:src = "@drawable/ic_account"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentBottom="true"
            />
        <Button
            android:id="@+id/account_btn_follow_signout"
            android:text="@string/follow"
            android:layout_toRightOf="@id/account_profile"
            android:background="@color/coral"
            android:textColor="@color/colorWhite"
            android:layout_alignParentBottom="true"

            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginHorizontal="10dp"
            />
        <LinearLayout
            android:gravity="center"
            android:layout_toRightOf="@+id/account_profile"
            android:layout_above="@+id/account_btn_follow_signout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:gravity="center"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/account_post_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/count_0"
                    android:textColor="@color/violet" />

                <TextView
                    android:text="@string/post"
                    android:textColor="@color/violet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:gravity="center"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/account_follower_count"
                    android:text="@string/count_0"
                    android:textColor="@color/violet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/account_follower_text"
                    android:text="@string/follower"
                    android:textColor="@color/violet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:gravity="center"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/account_following_count"
                    android:text="@string/count_0"
                    android:textColor="@color/violet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/account_following_text"
                    android:text="@string/following"
                    android:textColor="@color/violet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/account_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp">

    </android.support.v7.widget.RecyclerView>


</LinearLayout>
